--- a/app/src/main/res/layout/dialog_welcome.xml
+++ b/app/src/main/res/layout/dialog_welcome.xml
@@ -8,13 +8,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="144dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/ivAvatar"
             android:layout_width="@dimen/global_menu_avatar_size_large"
             android:layout_height="@dimen/global_menu_avatar_size_large"
-            android:elevation="4dp"
+            android:elevation="12dp"
             android:alpha="0.8"
             android:src="@drawable/avatar"
             android:layout_gravity="center"
@@ -25,7 +26,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:paddingBottom="144dp"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:text="Welcome, stranger"/>
 
