--- a/app/src/main/res/layout/dialog_zoom.xml
+++ b/app/src/main/res/layout/dialog_zoom.xml
@@ -84,7 +84,7 @@
                     android:layout_height="32dp"
                     android:src="@drawable/ic_arrow_up" />
 
-                <com.guanqing.subredditor.UI.UpvoteTextSwitcher
+                <com.guanqing.subredditor.UI.UI.UpvoteTextSwitcher
                     android:id="@+id/tsUpvotesCounter_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -108,7 +108,7 @@
                         android:paddingBottom="4dp"
                         android:text="1 karma"
                         android:textColor="@color/text_upvote_counter" />
-                </com.guanqing.subredditor.UI.UpvoteTextSwitcher>
+                </com.guanqing.subredditor.UI.UI.UpvoteTextSwitcher>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
