--- a/app/src/main/res/layout/frontpage_list_item.xml
+++ b/app/src/main/res/layout/frontpage_list_item.xml
@@ -20,7 +20,8 @@
         <ImageView
             android:id="@+id/ivFeedThumbnail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="24dp"
+            android:src="@android:color/transparent"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:maxHeight="400dp"
@@ -33,6 +34,7 @@
             android:layout_margin="4dp"
             android:maxLines="2"
             android:textSize="12sp"
+            android:ellipsize="end"
             android:text="No description"/>
 
         <LinearLayout
@@ -44,17 +46,18 @@
             <ImageButton
                 android:id="@+id/btnComments"
                 android:padding="2dp"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:background="@drawable/btn_feed_action"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_chat_bubble_outline" />
 
             <TextView
                 android:id="@+id/tvCommentCount"
-                android:gravity="center_vertical|end"
+                android:gravity="center_vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="22dp"
+                android:layout_height="18dp"
+                android:textSize="11sp"
                 android:textColor="@android:color/darker_gray"
                 android:text="0"/>
 
@@ -67,14 +70,16 @@
                 <ImageView
                     android:id="@+id/ivUpvotes"
                     android:padding="2dp"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
                     android:src="@drawable/ic_arrow_up" />
 
                 <TextView
-                    android:id="@+id/tvUpvotesCounter"
+                    android:id="@+id/tvKarma"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="18dp"
+                    android:gravity="center_vertical"
+                    android:textSize="11sp"
                     android:text="0"
                     android:textColor="@android:color/darker_gray" />
 
