modify ImgurUtil to correctly recognize images not from Imgur

--- a/app/src/main/res/layout/frontpage_list_item.xml
+++ b/app/src/main/res/layout/frontpage_list_item.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:id="@+id/ivFeedThumbnail"
             android:layout_width="match_parent"
-            android:layout_height="24dp"
+            android:layout_height="wrap_content"
             android:src="@android:color/transparent"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
