--- a/app/src/main/res/layout/dialog_welcome.xml
+++ b/app/src/main/res/layout/dialog_welcome.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,6 +29,14 @@
             android:layout_marginTop="8dp"
             android:textSize="@dimen/abc_text_size_medium_material"
             android:text="Welcome, stranger"/>
+
+        <com.guanqing.subredditor.UI.Widgets.AVLoadingIndicatorView
+            android:id="@+id/avloadingIndicatorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:indicator="Pacman"
+            app:indicator_color="@color/primary"
+            />
 
     </LinearLayout>
 
