--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -15,11 +15,11 @@
         app:itemTextColor="#666666"
         app:menu="@menu/drawer_menu">
 
-        <com.guanqing.subredditor.UI.ui.AnimatedExpandableListView.AnimatedExpandableListView
+        <com.guanqing.subredditor.UI.Widgets.AnimatedExpandableListView.AnimatedExpandableListView
             android:id="@+id/lvExpandable"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="88dp">
-        </com.guanqing.subredditor.UI.ui.AnimatedExpandableListView.AnimatedExpandableListView>
+        </com.guanqing.subredditor.UI.Widgets.AnimatedExpandableListView.AnimatedExpandableListView>
     </android.support.design.widget.NavigationView>
 </RelativeLayout>
