--- a/app/src/main/res/layout/dialog_gif_zoom.xml
+++ b/app/src/main/res/layout/dialog_gif_zoom.xml
@@ -1,111 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <!--suppress AndroidLintContentDescription -->
-    <com.guanqing.subredditor.UI.Widgets.GifView
-        android:id="@+id/ivGifThumbnail_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:background="@color/photo_placeholder" />
-
-    <TextView
-        android:id="@+id/tvFeedTitle_detail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:maxLines="3"
-        android:textSize="14sp"
-        android:text="No description"/>
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scrollView">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp">
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/btnSave_detail"
-            android:padding="2dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="@drawable/btn_feed_action"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_bookmark_border" />
-
-        <ImageButton
-            android:id="@+id/btnShare_detail"
-            android:padding="2dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="@drawable/btn_feed_action"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_share" />
-
-        <ImageButton
-            android:id="@+id/btnComments_detail"
-            android:padding="2dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:background="@drawable/btn_feed_action"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_chat_bubble_outline" />
-
-        <TextView
-            android:id="@+id/tvComments_detail"
-            android:gravity="center_vertical|end"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:textColor="@android:color/darker_gray"
-            android:text="24"/>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end">
+        <!--suppress AndroidLintContentDescription -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/ivUpvotes"
+                android:id="@+id/ivBackground_zoomgif"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:visibility="gone"
+                android:src="@drawable/error"
+                android:scaleType="fitCenter"
+                android:background="@color/photo_placeholder" />
+
+            <VideoView
+                android:id="@+id/vvGifView_zoomgif"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:background="@color/photo_placeholder" />
+
+            <com.guanqing.subredditor.UI.Widgets.LoadingIndicatorView
+                android:id="@+id/loadingIndicator_zoomgif"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:indicator="BallSpinFadeLoader"
+                app:indicator_color="@color/primary"/>
+
+        </FrameLayout>
+
+
+        <TextView
+            android:id="@+id/tvFeedTitle_zoomgif"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:maxLines="3"
+            android:ellipsize="end"
+            android:textSize="14sp"
+            android:text="No description"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp">
+
+            <ImageButton
+                android:id="@+id/btnSave_zoomgif"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/ic_arrow_up" />
+                android:background="@drawable/btn_feed_action"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_bookmark_border" />
 
-            <com.guanqing.subredditor.UI.Widgets.UpvoteTextSwitcher
-                android:id="@+id/tsUpvotesCounter_detail"
+            <ImageButton
+                android:id="@+id/btnShare_zoomgif"
+                android:padding="4dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/btn_feed_action"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_share" />
+
+            <ImageButton
+                android:id="@+id/btnComments_zoomgif"
+                android:padding="4dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@drawable/btn_feed_action"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_chat_bubble_outline" />
+
+            <TextView
+                android:id="@+id/tvCommentCount_zoomgif"
+                android:gravity="center_vertical|end"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inAnimation="@anim/slide_in_upvotes_counter"
-                android:outAnimation="@anim/slide_out_upvotes_counter">
+                android:layout_height="32dp"
+                android:textColor="@android:color/darker_gray"
+                android:text="24"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:layout_gravity="center"
-                    android:text="1989 karma"
-                    android:textColor="@android:color/darker_gray" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end">
 
-                <TextView
+                <ImageView
+                    android:id="@+id/ivUpvotes_zoomgif"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_arrow_up" />
+
+                <com.guanqing.subredditor.UI.Widgets.UpvoteTextSwitcher
+                    android:id="@+id/tsUpvotesCounter_zoomgif"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:layout_gravity="center"
-                    android:text="1990 karma"
-                    android:textColor="@color/text_upvote_counter" />
-            </com.guanqing.subredditor.UI.Widgets.UpvoteTextSwitcher>
+                    android:layout_height="match_parent"
+                    android:inAnimation="@anim/slide_in_upvotes_counter"
+                    android:outAnimation="@anim/slide_out_upvotes_counter">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:text="0 karma"
+                        android:textColor="@android:color/darker_gray" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:text="1 karma"
+                        android:textColor="@color/text_upvote_counter" />
+                </com.guanqing.subredditor.UI.Widgets.UpvoteTextSwitcher>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-
-</LinearLayout>
+</ScrollView>
