--- a/app/src/main/res/layout/frontpage_list_item.xml
+++ b/app/src/main/res/layout/frontpage_list_item.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             android:background="@color/photo_placeholder" />
 
         <TextView
